@@ -1,11 +1,10 @@
 package io.github.mschout;
 
+import com.google.common.collect.ImmutableList;
 import io.github.mschout.email.srs.SRS;
 import io.github.mschout.email.srs.provider.SRSProvider;
 import io.github.mschout.email.srs.provider.SRSProviderFactory;
 import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
-import java.util.List;
 
 /**
  * Hello world!
@@ -13,8 +12,8 @@ import java.util.List;
  */
 public class App {
 
-  public static void main(String[] args) throws NoSuchAlgorithmException, InvalidKeyException {
-    SRSProvider provider = new SRSProviderFactory().createProvider(SRS.Type.SHORTCUT, List.of("hackme1"));
+  public static void main(String[] args) throws InvalidKeyException {
+    SRSProvider provider = SRSProviderFactory.createProvider(SRS.Type.SHORTCUT, ImmutableList.of("hackme1"));
 
     String srsAddr = provider.compile("foo.com", "mschout");
     System.out.println(srsAddr);
