@@ -1,5 +1,7 @@
 package io.github.mschout.email.srs.provider;
 
+import com.google.common.collect.ImmutableList;
+
 import java.security.InvalidKeyException;
 import java.util.List;
 
@@ -13,7 +15,7 @@ public class ReversibleSRSProvider extends ShortCutSRSProvider implements SRSPro
   public String compile(String host, String user) throws InvalidKeyException {
     String timestamp = SRSTimestamp.generate();
 
-    String hash = createHash(List.of(timestamp, host, user));
+    String hash = createHash(ImmutableList.of(timestamp, host, user));
 
     return String.join(SRSSEP, SRSPrefix.SRS0, hash, timestamp, host, user);
   }
